testsuite/tests/typecheck/should_fail/T8392a.stderr

T8392a.hs:6:8: error:
    Couldn't match type ‘Int’ with ‘Bool’
    Inaccessible code in
      the type signature for:
        foo :: (Int ~ Bool) => a -> a
    In the ambiguity check for ‘foo’
    In the type signature: foo :: (Int ~ Bool) => a -> a
